--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       <a href="/mentions-legales.html">Mentions légales</a>
       <a href="/politique-confidentialite.html">Politique de confidentialité</a>
     </div>
-    <p>&copy; 2025 Maître [Nom] | Tous droits réservés</p>
+    <p>&copy; 2025 Maître Giorgi | Tous droits réservés</p>
   </footer>
 
 </body>
