--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -4,78 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mentions Légales - Maître [Nom]</title>
-  <link rel="stylesheet" href="/styles.css">
-  <style>
-    body {
-      font-family: 'Arial', sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #f4f4f4;
-      color: #333;
-    }
-    header {
-      background-color: #2c3e50;
-      color: white;
-      padding: 20px 0;
-      text-align: center;
-    }
-    header h1 {
-      margin: 0;
-    }
-    section {
-      padding: 40px 20px;
-      max-width: 1200px;
-      margin: 0 auto;
-      background-color: #fff;
-    }
-    h2 {
-      font-size: 28px;
-      margin-bottom: 20px;
-      color: #2c3e50;
-    }
-    h3 {
-      font-size: 22px;
-      margin-top: 30px;
-      color: #34495e;
-    }
-    p {
-      font-size: 16px;
-      line-height: 1.6;
-      margin-bottom: 15px;
-    }
-    footer {
-      background-color: #2c3e50;
-      color: white;
-      text-align: center;
-      padding: 20px 0;
-     
-     
-      width: 100%;
-    }
-    .footer-links a {
-      color: #ecf0f1;
-      margin: 0 15px;
-      text-decoration: none;
-    }
-    .footer-links a:hover {
-      text-decoration: underline;
-    }
-  </style>
+  <link rel="stylesheet" href="/stylesPage.css">
+
 </head>
 <body>
-    <nav>
-        <div><a href="/index.html"><img src="/images.jpeg" alt=""></a></div>
-        <ul class="nav-links">
-          <li><a href="#services">Domaine d'activité</a></li>
-          <li><a href="#honoraire">Honoraires</a></li>
-          <li><a href="#avis">Avis Clients</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
-      </nav>
-  <!-- Header Section -->
-  <header>
-    <h1>Mentions Légales</h1>
-  </header>
+  <nav>
+    <div><a href="/index.html"><img src="/images.jpeg" alt=""></a></div>
+    <div>    <h1>Mentions Légales</h1>
+    </div>
+  </nav>
+
 
   <!-- Contenu des Mentions Légales -->
   <section>
@@ -115,7 +53,7 @@
       <a href="/mentions-legales.html">Mentions légales</a>
       <a href="/politique-confidentialite.html">Politique de confidentialité</a>
     </div>
-    <p>&copy; 2025 Maître [Nom] | Tous droits réservés</p>
+    <p>&copy; 2025 Maître Giorgi | Tous droits réservés</p>
   </footer>
 
 </body>
