--- a/politique-confidentialite.html
+++ b/politique-confidentialite.html
@@ -3,71 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Politique de Confidentialité - Maître [Nom]</title>
+  <link rel="stylesheet" href="/stylesPage.css">
+  <title>Politique de Confidentialité - Maître Giorgi</title>
   <style>
-    body {
-      font-family: 'Arial', sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #f4f4f4;
-      color: #333;
-    }
-    header {
-      background-color: #2c3e50;
-      color: white;
-      padding: 20px 0;
-      text-align: center;
-    }
-    header h1 {
-      margin: 0;
-    }
-    section {
-      padding: 40px 20px;
-      max-width: 1200px;
-      margin: 0 auto;
-      background-color: #fff;
-    }
-    h2 {
-      font-size: 28px;
-      margin-bottom: 20px;
-      color: #2c3e50;
-    }
-    h3 {
-      font-size: 22px;
-      margin-top: 30px;
-      color: #34495e;
-    }
-    p {
-      font-size: 16px;
-      line-height: 1.6;
-      margin-bottom: 15px;
-    }
-    footer {
-      background-color: #2c3e50;
-      color: white;
-      text-align: center;
-      padding: 20px 0;
-      position: fixed;
-      bottom: 0;
-      width: 100%;
-    }
-    .footer-links a {
-      color: #ecf0f1;
-      margin: 0 15px;
-      text-decoration: none;
-    }
-    .footer-links a:hover {
-      text-decoration: underline;
-    }
+  
   </style>
 </head>
 <body>
-
-  <!-- Header Section -->
-  <header>
-    <h1>Politique de Confidentialité</h1>
-  </header>
-
+  <nav>
+    <div><a href="/index.html"><img src="/images.jpeg" alt=""></a></div>
+    
+    <div>    <h1>Politique de Confidentialité</h1>
+    </div>
+  </nav>
   <!-- Contenu de la Politique de Confidentialité -->
   <section>
     <div>
@@ -100,7 +48,7 @@
       <a href="/mentions-legales.html">Mentions légales</a>
       <a href="/politique-confidentialite.html">Politique de confidentialité</a>
     </div>
-    <p>&copy; 2025 Maître [Nom] | Tous droits réservés</p>
+    <p>&copy; 2025 Maître Giorgi| Tous droits réservés</p>
   </footer>
 
 </body>
