--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Maître [Nom] - Avocate</title>
+  <title>Maître Giorgi - Avocate</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -20,7 +20,7 @@
   <!-- Header Section -->
   <header>
     <div class="header-container">
-      <img src="/images.jpeg" alt="Maître [Nom]" class="header-photo">
+      <img src="/images.jpeg" alt="Maître Giorgi" class="header-photo">
       <div class="header-text">
         <h1>Lisa Giorgi</h1>
         <h2>Avocate en [spécialité]</h2>
@@ -77,7 +77,7 @@
     <div class="avis-container">
       <div class="avis-card">
         <h3>Client A</h3>
-        <p>"Maître [Nom] a été d'une grande aide pour résoudre mon problème fiscal. Je recommande vivement!"</p>
+        <p>"Maître Giorgi a été d'une grande aide pour résoudre mon problème fiscal. Je recommande vivement!"</p>
       </div>
       <div class="avis-card">
         <h3>Client B</h3>
