--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Maître Giorgi - Avocate</title>
+  <title>Maître Giorgi - Avocat</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -23,7 +23,7 @@
       <img src="/images.jpeg" alt="Maître Giorgi" class="header-photo">
       <div class="header-text">
         <h1>Lisa Giorgi</h1>
-        <h2>Avocate en [spécialité]</h2>
+        <h2>Avocat en [spécialité]</h2>
         <p>Je vous accompagne avec rigueur et discrétion pour défendre vos droits et vous guider dans vos démarches juridiques.</p>
       </div>
     </div>
@@ -85,7 +85,7 @@
       </div>
       <div class="avis-card">
         <h3>Client C</h3>
-        <p>"J'ai été très satisfait de l'accompagnement. Une avocate de confiance!"</p>
+        <p>"J'ai été très satisfait de l'accompagnement. Une Avocat de confiance!"</p>
       </div>
     </div>
   </section>
