--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -23,7 +23,7 @@
 
       <h3>1. Éditeur du site</h3>
       <p>Le site [Nom du Site] est édité par :<br>
-         Maître [Nom], Avocate en [Spécialité]<br>
+         Maître [Nom], Avocat en [Spécialité]<br>
          Adresse : [Adresse du Cabinet]<br>
          Téléphone : [Numéro de téléphone]<br>
          Email : [Email de contact]<br>
