text img domaine dactivite

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav>
-        <div><a href="/index.html"><img src="/images.jpeg" alt=""></a></div>
+        <div><a href="/index.html"><img src="/logo.jpg" alt=""></a></div>
         <ul class="nav-links">
           <li><a href="#services">Domaine d'activité</a></li>
           <li><a href="#honoraire">Honoraires</a></li>
@@ -20,7 +20,7 @@
   <!-- Header Section -->
   <header>
     <div class="header-container">
-      <img src="/images.jpeg" alt="Maître Giorgi" class="header-photo">
+      <img src="/profil.jpeg" alt="Maître Giorgi" class="header-photo">
       <div class="header-text">
         <h1>Lisa Giorgi</h1>
         <h2>Avocat en [spécialité]</h2>
@@ -31,26 +31,59 @@
 
   <!-- Domaine d'activité Section -->
   <section id="services">
-    <h2>Mon Domaine d'activité</h2>
+    <h2>Mon Domaine d'Activité</h2>
     <div class="services-container">
-      <div class="service-card">
-        <h3>Conseil fiscal</h3>
-        <p>Des conseils adaptés à vos besoins pour optimiser votre fiscalité.</p>
-      </div>
-      <div class="service-card">
-        <h3>Droit des sociétés</h3>
-        <p>Accompagnement juridique pour la création, gestion et dissolution d'entreprises.</p>
-      </div>
-      <div class="service-card">
-        <h3>Contrôle et Contentieux fiscal</h3>
-        <p>Assistance dans les démarches de contrôle fiscal et défense de vos intérêts en cas de contentieux.</p>
-      </div>
-      <div class="service-card">
-        <h3>Démarches avec l'administration fiscale</h3>
-        <p>Aide à la résolution de litiges et gestion des démarches administratives fiscales.</p>
-      </div>
+        <div class="service-card">
+            <h3>Relations avec l’administration fiscale</h3>
+            <p>Je vous accompagne dans toutes vos démarches auprès de l’administration fiscale pour simplifier et sécuriser vos obligations :</p>
+            <ul>
+                <li>Régularisation ou dépôt de déclarations fiscales, y compris hors délais.</li>
+                <li>Contestation et suivi des démarches après la réception d’un avis d’imposition (IR, IS, TVA, taxes locales).</li>
+                <li>Mise en place et sécurisation de dispositifs fiscaux spécifiques, comme l’application du régime de faveur des impatriés.</li>
+            </ul>
+        </div>
+
+        <div class="service-card">
+            <h3>Conseil en fiscalité</h3>
+            <p>J’accompagne mes clients dans la gestion de leur fiscalité en fonction de leurs objectifs personnels et professionnels, en mettant l’accent sur l’ingénierie fiscale pour trouver des solutions adaptées et sécurisées. Je vous aide à :</p>
+            <ul>
+                <li>Développer des stratégies fiscales sur mesure pour réduire votre imposition ou maximiser les avantages fiscaux, que ce soit pour les particuliers ou les entreprises.</li>
+                <li>Mettre en place des solutions d’ingénierie fiscale lors de la gestion de votre patrimoine, de la cession ou transmission d’entreprise, ou encore dans le cadre d’une succession ou donation.</li>
+                <li>Accompagner vos projets immobiliers avec une approche fiscale réfléchie, en vous conseillant sur les meilleures options lors de l’achat, de la vente ou des investissements.</li>
+                <li>Préparer et déposer vos déclarations fiscales dans le respect des obligations légales, afin de garantir une conformité totale.</li>
+            </ul>
+        </div>
+
+        <div class="service-card">
+            <h3>Gestion des contrôles et litiges fiscaux</h3>
+            <p>En cas de contrôle ou de litige fiscal, mon rôle est de vous défendre avec pragmatisme et réactivité. Je vous accompagne dans la gestion des relations avec l’administration fiscale, en élaborant des stratégies de défense adaptées à votre situation. Je vous aide à :</p>
+            <ul>
+                <li>Répondre aux demandes de renseignements ou de justifications de l’administration de manière stratégique et efficace.</li>
+                <li>Construire une défense solide lors des contrôles fiscaux, qu’il s’agisse de vérifications de comptabilité, d’examen de situation fiscale personnelle (ESFP), ou de contrôles sur la TVA, en analysant les éléments du dossier et en développant des arguments pour contester les impositions contestables.</li>
+            </ul>
+        </div>
+
+        <div class="service-card">
+            <h3>Droit des sociétés</h3>
+            <p>Accompagner mes clients dans la création et l’évolution de leur entreprise est un aspect essentiel de ma pratique. Je vous aide à structurer votre société pour qu’elle soit alignée avec vos objectifs, tout en anticipant les problématiques fiscales et juridiques. Mon rôle est de vous apporter une vision claire et stratégique à chaque étape :</p>
+            <ul>
+                <li>Créer votre société en prenant en compte vos besoins spécifiques et le cadre fiscal le plus avantageux.</li>
+                <li>Adapter et ajuster la structure de votre société au fur et à mesure de son développement, en tenant compte des évolutions de votre activité ou des changements dans votre équipe dirigeante.</li>
+            </ul>
+        </div>
+
+        <div class="service-card">
+            <h3>Dommage corporel et défense des victimes</h3>
+            <p>Je vous accompagne dans la défense de vos droits en cas de dommage corporel, en veillant à ce que vous soyez pleinement indemnisé pour vos préjudices. Mon rôle est de :</p>
+            <ul>
+                <li>Vous guider dans les démarches juridiques à effectuer après un accident, qu’il soit médical, de la route ou autre.</li>
+                <li>Analyser l’ensemble de votre préjudice (corporel, psychologique, financier) afin d’évaluer correctement l’indemnisation à laquelle vous avez droit.</li>
+                <li>Négocier avec les assureurs ou, si nécessaire, représenter vos intérêts devant les juridictions compétentes pour obtenir une indemnisation complète et juste.</li>
+            </ul>
+        </div>
     </div>
-  </section>
+</section>
+
 
   <!-- Honoraire Section -->
   <section id="honoraire">
