--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
   <!-- Contact Section -->
   <section id="contact">
-    <h2>Contacte</h2>
+    <h2>Contact</h2>
     <div class="contact-container">
       <div class="map-container">
         <iframe
