add avis clients

--- a/index.html
+++ b/index.html
@@ -108,17 +108,33 @@
   <section id="avis">
     <h2>Avis Clients</h2>
     <div class="avis-container">
-      <div class="avis-card">
-        <h3>Client A</h3>
-        <p>"Maître Giorgi a été d'une grande aide pour résoudre mon problème fiscal. Je recommande vivement!"</p>
-      </div>
-      <div class="avis-card">
-        <h3>Client B</h3>
-        <p>"Un travail excellent, très professionnel et une grande écoute. Merci pour votre soutien." </p>
-      </div>
-      <div class="avis-card">
-        <h3>Client C</h3>
-        <p>"J'ai été très satisfait de l'accompagnement. Une Avocat de confiance!"</p>
+      <div class="avis-slider">
+        <div class="avis-card">
+          <h3>Client A</h3>
+          <p>"Maître Giorgi a été d'une grande aide pour résoudre mon problème fiscal. Je recommande vivement!"</p>
+          <div class="stars">★★★★★</div>
+        </div>
+        <div class="avis-card">
+          <h3>Client B</h3>
+          <p>"Un travail excellent, très professionnel et une grande écoute. Merci pour votre soutien."</p>
+          <div class="stars">★★★★☆</div>
+        </div>
+        <div class="avis-card">
+          <h3>Client C</h3>
+          <p>"J'ai été très satisfait de l'accompagnement. Une Avocat de confiance!"</p>
+          <div class="stars">★★★★★</div>
+        </div>
+        <div class="avis-card">
+          <h3>Client D</h3>
+          <p>"Service impeccable et réactivité. Je recommande sans hésiter."</p>
+          <div class="stars">★★★★☆</div>
+        </div>
+        <div class="avis-card">
+          <h3>Client E</h3>
+          <p>"Très professionnel et à l'écoute. Un grand merci pour votre aide."</p>
+          <div class="stars">★★★★★</div>
+        </div>
+        <!-- Ajoutez plus de cartes ici -->
       </div>
     </div>
   </section>
