--- a/index.html
+++ b/index.html
@@ -8,15 +8,34 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <nav>
-        <div><a href="/index.html"><img src="/logo.jpg" alt=""></a></div>
-        <ul class="nav-links">
-          <li><a href="#services">Domaine d'activité</a></li>
-          <li><a href="#honoraire">Honoraires</a></li>
-          <li><a href="#avis">Avis Clients</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
-      </nav>
+  <nav>
+    <div class="nav-left">
+        <a href="/index.html">
+            <img src="/logo.jpg" alt="Logo">
+        </a>
+    </div>
+    <div class="hamburger">
+        <img src="hamburger.svg" alt="Menu">
+    </div>
+    <ul class="nav-links">
+        <li><a href="#services">Domaine d'activité</a></li>
+        <li><a href="#honoraire">Honoraires</a></li>
+        <li><a href="#avis">Avis Clients</a></li>
+        <li><a href="#contact">Contact</a></li>
+    </ul>
+</nav>
+
+<!-- Sidebar -->
+<div class="sidebar">
+    <button class="close-btn">&times;</button>
+    <ul>
+        <li><a href="#services">Domaine d'activité</a></li>
+        <li><a href="#honoraire">Honoraires</a></li>
+        <li><a href="#avis">Avis Clients</a></li>
+        <li><a href="#contact">Contact</a></li>
+    </ul>
+</div>
+
   <!-- Header Section -->
   <header>
     <div class="header-container">
@@ -134,6 +153,21 @@
           <p>"Très professionnel et à l'écoute. Un grand merci pour votre aide."</p>
           <div class="stars">★★★★★</div>
         </div>
+        <div class="avis-card">
+          <h3>Client C</h3>
+          <p>"J'ai été très satisfait de l'accompagnement. Une Avocat de confiance!"</p>
+          <div class="stars">★★★★★</div>
+        </div>
+        <div class="avis-card">
+          <h3>Client D</h3>
+          <p>"Service impeccable et réactivité. Je recommande sans hésiter."</p>
+          <div class="stars">★★★★☆</div>
+        </div>
+        <div class="avis-card">
+          <h3>Client E</h3>
+          <p>"Très professionnel et à l'écoute. Un grand merci pour votre aide."</p>
+          <div class="stars">★★★★★</div>
+        </div>
         <!-- Ajoutez plus de cartes ici -->
       </div>
     </div>
@@ -143,17 +177,7 @@
   <section id="contact">
     <h2>Contact</h2>
     <div class="contact-container">
-      <div class="map-container">
-        <iframe
-        width="300"
-        height="300"
-        style="border:0"
-        loading="lazy"
-        allowfullscreen
-        referrerpolicy="no-referrer-when-downgrade"
-        src="https://www.google.com/maps/embed/v1/place?key=API_KEY
-          &q=Space+Needle,Seattle+WA">
-      </iframe>      </div>
+      
       <div class="form-container">
         <form action="mailto:votre-email@example.com" method="post" enctype="text/plain">
           <label for="name">Nom :</label>
@@ -168,6 +192,17 @@
           <button type="submit" class="btn-primary">Envoyer</button>
         </form>
       </div>
+      <div class="map-container">
+        <iframe
+        width="300"
+        height="300"
+        style="border:0"
+        loading="lazy"
+        allowfullscreen
+        referrerpolicy="no-referrer-when-downgrade"
+        src="https://www.google.com/maps/embed/v1/place?key=API_KEY
+          &q=Space+Needle,Seattle+WA">
+      </iframe>      </div>
     </div>
   </section>
 
@@ -181,4 +216,5 @@
   </footer>
 
 </body>
+<script src="/script.js"></script>
 </html>
