--- a/index.html
+++ b/index.html
@@ -175,7 +175,8 @@
 
   <!-- Contact Section -->
   <section id="contact">
-    <h2>Contact</h2>
+    <div class="title-contact">
+    <h2>Contact</h2></div>
     <div class="contact-container">
       
       <div class="form-container">
