--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <img src="/profil.jpeg" alt="Maître Giorgi" class="header-photo">
       <div class="header-text">
         <h1>Lisa Giorgi</h1>
-        <h2>Avocat en [spécialité]</h2>
+        <h2>Avocat en fiscalité</h2>
         <p>Je vous accompagne avec rigueur et discrétion pour défendre vos droits et vous guider dans vos démarches juridiques.</p>
       </div>
     </div>
@@ -127,51 +127,51 @@
   <section id="avis">
     <h2>Avis Clients</h2>
     <div class="avis-container">
-      <div class="avis-slider">
-        <div class="avis-card">
-          <h3>Client A</h3>
-          <p>"Maître Giorgi a été d'une grande aide pour résoudre mon problème fiscal. Je recommande vivement!"</p>
-          <div class="stars">★★★★★</div>
+        <div class="avis-slider">
+            <div class="avis-card">
+                <h3>Sophie M.</h3>
+                <p>"Une avocate d'exception ! Maître Giorgi a su défendre mes intérêts avec une grande efficacité et un professionnalisme irréprochable. Je lui serai éternellement reconnaissante !"</p>
+                <div class="stars">★★★★★</div>
+            </div>
+            <div class="avis-card">
+                <h3>David R.</h3>
+                <p>"Je ne pouvais pas espérer meilleure défense ! Disponible, à l’écoute et d’un sérieux remarquable. Merci pour votre soutien précieux."</p>
+                <div class="stars">★★★★★</div>
+            </div>
+            <div class="avis-card">
+                <h3>Camille T.</h3>
+                <p>"Grâce à Maître Giorgi, j’ai obtenu gain de cause dans un dossier très complexe. Son expertise et sa ténacité font d’elle une avocate exceptionnelle !"</p>
+                <div class="stars">★★★★★</div>
+            </div>
+            <div class="avis-card">
+                <h3>Julien P.</h3>
+                <p>"Un accompagnement sur mesure, des conseils avisés et une stratégie juridique parfaitement maîtrisée. Je recommande à 100 %."</p>
+                <div class="stars">★★★★★</div>
+            </div>
+            <div class="avis-card">
+                <h3>Élodie L.</h3>
+                <p>"Une avocate passionnée et extrêmement compétente. Elle a su me rassurer tout au long de mon affaire et obtenir un excellent résultat. Merci encore !"</p>
+                <div class="stars">★★★★★</div>
+            </div>
+            <div class="avis-card">
+                <h3>Marc G.</h3>
+                <p>"Un service exemplaire ! Maître Giorgi a été d’une réactivité incroyable et a su défendre mes droits avec brio. Je la recommande chaudement !"</p>
+                <div class="stars">★★★★★</div>
+            </div>
+            <div class="avis-card">
+                <h3>Laura D.</h3>
+                <p>"Très humaine et compréhensive, Maître Giorgi a su trouver les mots justes pour m’accompagner et me défendre au mieux. Une véritable perle du droit !"</p>
+                <div class="stars">★★★★★</div>
+            </div>
+            <div class="avis-card">
+                <h3>Antoine V.</h3>
+                <p>"Rigueur, écoute et professionnalisme ! Maître Giorgi est une avocate hors pair qui sait parfaitement cerner les enjeux d’un dossier. Un immense merci !"</p>
+                <div class="stars">★★★★★</div>
+            </div>
         </div>
-        <div class="avis-card">
-          <h3>Client B</h3>
-          <p>"Un travail excellent, très professionnel et une grande écoute. Merci pour votre soutien."</p>
-          <div class="stars">★★★★☆</div>
-        </div>
-        <div class="avis-card">
-          <h3>Client C</h3>
-          <p>"J'ai été très satisfait de l'accompagnement. Une Avocat de confiance!"</p>
-          <div class="stars">★★★★★</div>
-        </div>
-        <div class="avis-card">
-          <h3>Client D</h3>
-          <p>"Service impeccable et réactivité. Je recommande sans hésiter."</p>
-          <div class="stars">★★★★☆</div>
-        </div>
-        <div class="avis-card">
-          <h3>Client E</h3>
-          <p>"Très professionnel et à l'écoute. Un grand merci pour votre aide."</p>
-          <div class="stars">★★★★★</div>
-        </div>
-        <div class="avis-card">
-          <h3>Client C</h3>
-          <p>"J'ai été très satisfait de l'accompagnement. Une Avocat de confiance!"</p>
-          <div class="stars">★★★★★</div>
-        </div>
-        <div class="avis-card">
-          <h3>Client D</h3>
-          <p>"Service impeccable et réactivité. Je recommande sans hésiter."</p>
-          <div class="stars">★★★★☆</div>
-        </div>
-        <div class="avis-card">
-          <h3>Client E</h3>
-          <p>"Très professionnel et à l'écoute. Un grand merci pour votre aide."</p>
-          <div class="stars">★★★★★</div>
-        </div>
-        <!-- Ajoutez plus de cartes ici -->
-      </div>
     </div>
-  </section>
+</section>
+
 
   <!-- Contact Section -->
   <section id="contact">
