--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Maître Giorgi - Avocat</title>
+  <link rel="icon" type="image/x-icon" href="logo.ico">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -129,43 +130,48 @@
     <div class="avis-container">
         <div class="avis-slider">
             <div class="avis-card">
-                <h3>Sophie M.</h3>
-                <p>"Une avocate d'exception ! Maître Giorgi a su défendre mes intérêts avec une grande efficacité et un professionnalisme irréprochable. Je lui serai éternellement reconnaissante !"</p>
+                <h3>Anne-Sophie Asselin</h3>
+                <p>"Magnifique espace pour des rendez-vous professionnels, entretiens et séminaires. Les locaux sont flambant neufs, modernes et confortables. Un véritable plaisir !"</p>
                 <div class="stars">★★★★★</div>
             </div>
             <div class="avis-card">
-                <h3>David R.</h3>
-                <p>"Je ne pouvais pas espérer meilleure défense ! Disponible, à l’écoute et d’un sérieux remarquable. Merci pour votre soutien précieux."</p>
+                <h3>Jeanine FIALON</h3>
+                <p>"Un immeuble de bureaux très récent, situé dans un quartier d’affaires dynamique. Parfaitement entretenu et fonctionnel."</p>
+                <div class="stars">★★★★☆</div>
+            </div>
+            <div class="avis-card">
+                <h3>Zena Zen</h3>
+                <p>"Immeuble de bureaux sympa, j’aime beaucoup le café à l’intérieur !"</p>
+                <div class="stars">★★★★☆</div>
+            </div>
+            <div class="avis-card">
+                <h3>Olivier Malabiau</h3>
+                <p>"Un complexe moderne, voire futuriste, à proximité des ports. Petit bémol : les accès sont un peu compliqués."</p>
+                <div class="stars">★★★★☆</div>
+            </div>
+            <div class="avis-card">
+                <h3>Anthony Daussy</h3>
+                <p>"Un lieu très moderne et neuf où l'on se sent bien. Idéal pour travailler en toute sérénité."</p>
                 <div class="stars">★★★★★</div>
             </div>
             <div class="avis-card">
-                <h3>Camille T.</h3>
-                <p>"Grâce à Maître Giorgi, j’ai obtenu gain de cause dans un dossier très complexe. Son expertise et sa ténacité font d’elle une avocate exceptionnelle !"</p>
+                <h3>Jack Salnot</h3>
+                <p>"Immeuble sobre et bien conçu, mais il manque un peu d’âme à mon goût."</p>
+                <div class="stars">★★★☆☆</div>
+            </div>
+            <div class="avis-card">
+                <h3>Marlène Jackson</h3>
+                <p>"Un immeuble de bureaux moderne et bien aménagé. Rien à redire !"</p>
+                <div class="stars">★★★★☆</div>
+            </div>
+            <div class="avis-card">
+                <h3>Mahesh Kumar</h3>
+                <p>"Un très bon espace de bureaux, bien organisé et agréable."</p>
                 <div class="stars">★★★★★</div>
             </div>
             <div class="avis-card">
-                <h3>Julien P.</h3>
-                <p>"Un accompagnement sur mesure, des conseils avisés et une stratégie juridique parfaitement maîtrisée. Je recommande à 100 %."</p>
-                <div class="stars">★★★★★</div>
-            </div>
-            <div class="avis-card">
-                <h3>Élodie L.</h3>
-                <p>"Une avocate passionnée et extrêmement compétente. Elle a su me rassurer tout au long de mon affaire et obtenir un excellent résultat. Merci encore !"</p>
-                <div class="stars">★★★★★</div>
-            </div>
-            <div class="avis-card">
-                <h3>Marc G.</h3>
-                <p>"Un service exemplaire ! Maître Giorgi a été d’une réactivité incroyable et a su défendre mes droits avec brio. Je la recommande chaudement !"</p>
-                <div class="stars">★★★★★</div>
-            </div>
-            <div class="avis-card">
-                <h3>Laura D.</h3>
-                <p>"Très humaine et compréhensive, Maître Giorgi a su trouver les mots justes pour m’accompagner et me défendre au mieux. Une véritable perle du droit !"</p>
-                <div class="stars">★★★★★</div>
-            </div>
-            <div class="avis-card">
-                <h3>Antoine V.</h3>
-                <p>"Rigueur, écoute et professionnalisme ! Maître Giorgi est une avocate hors pair qui sait parfaitement cerner les enjeux d’un dossier. Un immense merci !"</p>
+                <h3>Allen Alvares</h3>
+                <p>"Un espace de travail impeccable, idéalement situé. Je recommande."</p>
                 <div class="stars">★★★★★</div>
             </div>
         </div>
@@ -173,37 +179,27 @@
 </section>
 
 
+
   <!-- Contact Section -->
   <section id="contact">
     <div class="title-contact">
-    <h2>Contact</h2></div>
+      <h2>Contactez-moi</h2>
+    </div>
     <div class="contact-container">
       
       <div class="form-container">
-        <form action="mailto:votre-email@example.com" method="post" enctype="text/plain">
-          <label for="name">Nom :</label>
-          <input type="text" id="name" name="name" required>
-
-          <label for="email">Email :</label>
-          <input type="email" id="email" name="email" required>
-
-          <label for="message">Message :</label>
-          <textarea id="message" name="message" required></textarea>
-
-          <button type="submit" class="btn-primary">Envoyer</button>
-        </form>
+        <form id="contact-form">
+          <input type="text" id="name" placeholder="Votre nom" required />
+          <input type="email" id="email" placeholder="Votre email" required />
+          <textarea id="message" placeholder="Votre message" required></textarea>
+          <button type="submit">Envoyer</button>
+      </form>
+      
+      <div id="status-message"></div>
       </div>
       <div class="map-container">
-        <iframe
-        width="300"
-        height="300"
-        style="border:0"
-        loading="lazy"
-        allowfullscreen
-        referrerpolicy="no-referrer-when-downgrade"
-        src="https://www.google.com/maps/embed/v1/place?key=API_KEY
-          &q=Space+Needle,Seattle+WA">
-      </iframe>      </div>
+        <div style="width: 100%"><iframe width="100%" height="600" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=Immeuble%20le%20Calypso,%20Quartier%20Euromed,%2048%20Quai%20du%20Lazaret,%2013002%20Marseille+(EY%20Soci%C3%A9t%C3%A9%20d%E2%80%99Avocats)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.gps.ie/">gps trackers</a></iframe></div>     -->
+    </div> 
     </div>
   </section>
 
@@ -218,4 +214,6 @@
 
 </body>
 <script src="/script.js"></script>
+<script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
+
 </html>
