--- a/index.html
+++ b/index.html
@@ -1,41 +1,58 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Maître Giorgi - Avocat</title>
+  <meta name="description"
+    content="Maître Giorgi, avocat à Marseille, vous accompagne dans vos démarches juridiques. Expertise en droit pénal, civil, commercial et plus. Contactez-moi pour des conseils adaptés à vos besoins.">
+  <meta name="keywords" content="avocat, Marseille, droit pénal, droit civil, droit commercial, conseils juridiques">
+  <meta name="author" content="Maître Giorgi">
+  <meta property="og:title" content="Maître Giorgi - Avocat à Marseille">
+  <meta property="og:description"
+    content="Avocat expérimenté à Marseille, offrant des services en droit pénal, civil et commercial. Consultation disponible.">
+  <meta property="og:image" content="/profil.jpeg">
+  <meta property="og:url" content="https://lisagiorgiavocat.netlify.app/">
+  <meta property="og:type" content="website">
+  <meta name="robots" content="index, follow">
+  <meta name="language" content="fr">
+  <meta name="robots" content="max-snippet:-1, max-image-preview:large, max-video-preview:-1">
+
+  <title>Maître Giorgi - Avocat à Marseille</title>
   <link rel="icon" type="image/x-icon" href="logo.ico">
   <link rel="stylesheet" href="styles.css">
 </head>
+
+
 <body>
   <nav>
     <div class="nav-left">
-        <a href="/index.html">
-            <img src="/logo.jpg" alt="Logo">
-        </a>
+      <a href="/index.html">
+        <img src="/logo.jpg" alt="Logo">
+      </a>
     </div>
     <div class="hamburger">
-        <img src="hamburger.svg" alt="Menu">
+      <img src="hamburger.svg" alt="Menu">
     </div>
     <ul class="nav-links">
-        <li><a href="#services">Domaine d'activité</a></li>
-        <li><a href="#honoraire">Honoraires</a></li>
-        <li><a href="#avis">Avis Clients</a></li>
-        <li><a href="#contact">Contact</a></li>
+      <li><a href="#services">Domaine d'activité</a></li>
+      <li><a href="#honoraire">Honoraires</a></li>
+      <li><a href="#avis">Avis Clients</a></li>
+      <li><a href="#contact">Contact</a></li>
     </ul>
-</nav>
+  </nav>
 
-<!-- Sidebar -->
-<div class="sidebar">
+  <!-- Sidebar -->
+  <div class="sidebar">
     <button class="close-btn">&times;</button>
     <ul>
-        <li><a href="#services">Domaine d'activité</a></li>
-        <li><a href="#honoraire">Honoraires</a></li>
-        <li><a href="#avis">Avis Clients</a></li>
-        <li><a href="#contact">Contact</a></li>
+      <li><a href="#services">Domaine d'activité</a></li>
+      <li><a href="#honoraire">Honoraires</a></li>
+      <li><a href="#avis">Avis Clients</a></li>
+      <li><a href="#contact">Contact</a></li>
     </ul>
-</div>
+  </div>
 
   <!-- Header Section -->
   <header>
@@ -44,7 +61,8 @@
       <div class="header-text">
         <h1>Lisa Giorgi</h1>
         <h2>Avocat en fiscalité</h2>
-        <p>Je vous accompagne avec rigueur et discrétion pour défendre vos droits et vous guider dans vos démarches juridiques.</p>
+        <p>Je vous accompagne avec rigueur et discrétion pour défendre vos droits et vous guider dans vos démarches
+          juridiques.</p>
       </div>
     </div>
   </header>
@@ -53,56 +71,79 @@
   <section id="services">
     <h2>Mon Domaine d'Activité</h2>
     <div class="services-container">
-        <div class="service-card">
-            <h3>Relations avec l’administration fiscale</h3>
-            <p>Je vous accompagne dans toutes vos démarches auprès de l’administration fiscale pour simplifier et sécuriser vos obligations :</p>
-            <ul>
-                <li>Régularisation ou dépôt de déclarations fiscales, y compris hors délais.</li>
-                <li>Contestation et suivi des démarches après la réception d’un avis d’imposition (IR, IS, TVA, taxes locales).</li>
-                <li>Mise en place et sécurisation de dispositifs fiscaux spécifiques, comme l’application du régime de faveur des impatriés.</li>
-            </ul>
-        </div>
+      <div class="service-card">
+        <h3>Relations avec l’administration fiscale</h3>
+        <p>Je vous accompagne dans toutes vos démarches auprès de l’administration fiscale pour simplifier et sécuriser
+          vos obligations :</p>
+        <ul>
+          <li>Régularisation ou dépôt de déclarations fiscales, y compris hors délais.</li>
+          <li>Contestation et suivi des démarches après la réception d’un avis d’imposition (IR, IS, TVA, taxes
+            locales).</li>
+          <li>Mise en place et sécurisation de dispositifs fiscaux spécifiques, comme l’application du régime de faveur
+            des impatriés.</li>
+        </ul>
+      </div>
 
-        <div class="service-card">
-            <h3>Conseil en fiscalité</h3>
-            <p>J’accompagne mes clients dans la gestion de leur fiscalité en fonction de leurs objectifs personnels et professionnels, en mettant l’accent sur l’ingénierie fiscale pour trouver des solutions adaptées et sécurisées. Je vous aide à :</p>
-            <ul>
-                <li>Développer des stratégies fiscales sur mesure pour réduire votre imposition ou maximiser les avantages fiscaux, que ce soit pour les particuliers ou les entreprises.</li>
-                <li>Mettre en place des solutions d’ingénierie fiscale lors de la gestion de votre patrimoine, de la cession ou transmission d’entreprise, ou encore dans le cadre d’une succession ou donation.</li>
-                <li>Accompagner vos projets immobiliers avec une approche fiscale réfléchie, en vous conseillant sur les meilleures options lors de l’achat, de la vente ou des investissements.</li>
-                <li>Préparer et déposer vos déclarations fiscales dans le respect des obligations légales, afin de garantir une conformité totale.</li>
-            </ul>
-        </div>
+      <div class="service-card">
+        <h3>Conseil en fiscalité</h3>
+        <p>J’accompagne mes clients dans la gestion de leur fiscalité en fonction de leurs objectifs personnels et
+          professionnels, en mettant l’accent sur l’ingénierie fiscale pour trouver des solutions adaptées et
+          sécurisées. Je vous aide à :</p>
+        <ul>
+          <li>Développer des stratégies fiscales sur mesure pour réduire votre imposition ou maximiser les avantages
+            fiscaux, que ce soit pour les particuliers ou les entreprises.</li>
+          <li>Mettre en place des solutions d’ingénierie fiscale lors de la gestion de votre patrimoine, de la cession
+            ou transmission d’entreprise, ou encore dans le cadre d’une succession ou donation.</li>
+          <li>Accompagner vos projets immobiliers avec une approche fiscale réfléchie, en vous conseillant sur les
+            meilleures options lors de l’achat, de la vente ou des investissements.</li>
+          <li>Préparer et déposer vos déclarations fiscales dans le respect des obligations légales, afin de garantir
+            une conformité totale.</li>
+        </ul>
+      </div>
 
-        <div class="service-card">
-            <h3>Gestion des contrôles et litiges fiscaux</h3>
-            <p>En cas de contrôle ou de litige fiscal, mon rôle est de vous défendre avec pragmatisme et réactivité. Je vous accompagne dans la gestion des relations avec l’administration fiscale, en élaborant des stratégies de défense adaptées à votre situation. Je vous aide à :</p>
-            <ul>
-                <li>Répondre aux demandes de renseignements ou de justifications de l’administration de manière stratégique et efficace.</li>
-                <li>Construire une défense solide lors des contrôles fiscaux, qu’il s’agisse de vérifications de comptabilité, d’examen de situation fiscale personnelle (ESFP), ou de contrôles sur la TVA, en analysant les éléments du dossier et en développant des arguments pour contester les impositions contestables.</li>
-            </ul>
-        </div>
+      <div class="service-card">
+        <h3>Gestion des contrôles et litiges fiscaux</h3>
+        <p>En cas de contrôle ou de litige fiscal, mon rôle est de vous défendre avec pragmatisme et réactivité. Je vous
+          accompagne dans la gestion des relations avec l’administration fiscale, en élaborant des stratégies de défense
+          adaptées à votre situation. Je vous aide à :</p>
+        <ul>
+          <li>Répondre aux demandes de renseignements ou de justifications de l’administration de manière stratégique et
+            efficace.</li>
+          <li>Construire une défense solide lors des contrôles fiscaux, qu’il s’agisse de vérifications de comptabilité,
+            d’examen de situation fiscale personnelle (ESFP), ou de contrôles sur la TVA, en analysant les éléments du
+            dossier et en développant des arguments pour contester les impositions contestables.</li>
+        </ul>
+      </div>
 
-        <div class="service-card">
-            <h3>Droit des sociétés</h3>
-            <p>Accompagner mes clients dans la création et l’évolution de leur entreprise est un aspect essentiel de ma pratique. Je vous aide à structurer votre société pour qu’elle soit alignée avec vos objectifs, tout en anticipant les problématiques fiscales et juridiques. Mon rôle est de vous apporter une vision claire et stratégique à chaque étape :</p>
-            <ul>
-                <li>Créer votre société en prenant en compte vos besoins spécifiques et le cadre fiscal le plus avantageux.</li>
-                <li>Adapter et ajuster la structure de votre société au fur et à mesure de son développement, en tenant compte des évolutions de votre activité ou des changements dans votre équipe dirigeante.</li>
-            </ul>
-        </div>
+      <div class="service-card">
+        <h3>Droit des sociétés</h3>
+        <p>Accompagner mes clients dans la création et l’évolution de leur entreprise est un aspect essentiel de ma
+          pratique. Je vous aide à structurer votre société pour qu’elle soit alignée avec vos objectifs, tout en
+          anticipant les problématiques fiscales et juridiques. Mon rôle est de vous apporter une vision claire et
+          stratégique à chaque étape :</p>
+        <ul>
+          <li>Créer votre société en prenant en compte vos besoins spécifiques et le cadre fiscal le plus avantageux.
+          </li>
+          <li>Adapter et ajuster la structure de votre société au fur et à mesure de son développement, en tenant compte
+            des évolutions de votre activité ou des changements dans votre équipe dirigeante.</li>
+        </ul>
+      </div>
 
-        <div class="service-card">
-            <h3>Dommage corporel et défense des victimes</h3>
-            <p>Je vous accompagne dans la défense de vos droits en cas de dommage corporel, en veillant à ce que vous soyez pleinement indemnisé pour vos préjudices. Mon rôle est de :</p>
-            <ul>
-                <li>Vous guider dans les démarches juridiques à effectuer après un accident, qu’il soit médical, de la route ou autre.</li>
-                <li>Analyser l’ensemble de votre préjudice (corporel, psychologique, financier) afin d’évaluer correctement l’indemnisation à laquelle vous avez droit.</li>
-                <li>Négocier avec les assureurs ou, si nécessaire, représenter vos intérêts devant les juridictions compétentes pour obtenir une indemnisation complète et juste.</li>
-            </ul>
-        </div>
+      <div class="service-card">
+        <h3>Dommage corporel et défense des victimes</h3>
+        <p>Je vous accompagne dans la défense de vos droits en cas de dommage corporel, en veillant à ce que vous soyez
+          pleinement indemnisé pour vos préjudices. Mon rôle est de :</p>
+        <ul>
+          <li>Vous guider dans les démarches juridiques à effectuer après un accident, qu’il soit médical, de la route
+            ou autre.</li>
+          <li>Analyser l’ensemble de votre préjudice (corporel, psychologique, financier) afin d’évaluer correctement
+            l’indemnisation à laquelle vous avez droit.</li>
+          <li>Négocier avec les assureurs ou, si nécessaire, représenter vos intérêts devant les juridictions
+            compétentes pour obtenir une indemnisation complète et juste.</li>
+        </ul>
+      </div>
     </div>
-</section>
+  </section>
 
 
   <!-- Honoraire Section -->
@@ -128,61 +169,64 @@
   <section id="avis">
     <h2>Avis Clients</h2>
     <div class="avis-container">
-        <div class="avis-slider">
-            <div class="avis-card">
-                <h3>Anne-Sophie Asselin</h3>
-                <p>"Magnifique espace pour des rendez-vous professionnels, entretiens et séminaires. Les locaux sont flambant neufs, modernes et confortables. Un véritable plaisir !"</p>
-                <div class="stars">★★★★★</div>
-            </div>
-            <div class="avis-card">
-                <h3>Jeanine FIALON</h3>
-                <p>"Un immeuble de bureaux très récent, situé dans un quartier d’affaires dynamique. Parfaitement entretenu et fonctionnel."</p>
-                <div class="stars">★★★★☆</div>
-            </div>
-            <div class="avis-card">
-                <h3>Zena Zen</h3>
-                <p>"Immeuble de bureaux sympa, j’aime beaucoup le café à l’intérieur !"</p>
-                <div class="stars">★★★★☆</div>
-            </div>
-            <div class="avis-card">
-                <h3>Olivier Malabiau</h3>
-                <p>"Un complexe moderne, voire futuriste, à proximité des ports. Petit bémol : les accès sont un peu compliqués."</p>
-                <div class="stars">★★★★☆</div>
-            </div>
-            <div class="avis-card">
-                <h3>Anthony Daussy</h3>
-                <p>"Un lieu très moderne et neuf où l'on se sent bien. Idéal pour travailler en toute sérénité."</p>
-                <div class="stars">★★★★★</div>
-            </div>
-            <div class="avis-card">
-                <h3>Jack Salnot</h3>
-                <p>"Immeuble sobre et bien conçu, mais il manque un peu d’âme à mon goût."</p>
-                <div class="stars">★★★☆☆</div>
-            </div>
-            <div class="avis-card">
-                <h3>Marlène Jackson</h3>
-                <p>"Un immeuble de bureaux moderne et bien aménagé. Rien à redire !"</p>
-                <div class="stars">★★★★☆</div>
-            </div>
-            <div class="avis-card">
-                <h3>Mahesh Kumar</h3>
-                <p>"Un très bon espace de bureaux, bien organisé et agréable."</p>
-                <div class="stars">★★★★★</div>
-            </div>
-            <div class="avis-card">
-                <h3>Allen Alvares</h3>
-                <p>"Un espace de travail impeccable, idéalement situé. Je recommande."</p>
-                <div class="stars">★★★★★</div>
-            </div>
+      <div class="avis-slider">
+        <div class="avis-card">
+          <h3>Anne-Sophie Asselin</h3>
+          <p>"Magnifique espace pour des rendez-vous professionnels, entretiens et séminaires. Les locaux sont flambant
+            neufs, modernes et confortables. Un véritable plaisir !"</p>
+          <div class="stars">★★★★★</div>
         </div>
+        <div class="avis-card">
+          <h3>Jeanine FIALON</h3>
+          <p>"Un immeuble de bureaux très récent, situé dans un quartier d’affaires dynamique. Parfaitement entretenu et
+            fonctionnel."</p>
+          <div class="stars">★★★★☆</div>
+        </div>
+        <div class="avis-card">
+          <h3>Zena Zen</h3>
+          <p>"Immeuble de bureaux sympa, j’aime beaucoup le café à l’intérieur !"</p>
+          <div class="stars">★★★★☆</div>
+        </div>
+        <div class="avis-card">
+          <h3>Olivier Malabiau</h3>
+          <p>"Un complexe moderne, voire futuriste, à proximité des ports. Petit bémol : les accès sont un peu
+            compliqués."</p>
+          <div class="stars">★★★★☆</div>
+        </div>
+        <div class="avis-card">
+          <h3>Anthony Daussy</h3>
+          <p>"Un lieu très moderne et neuf où l'on se sent bien. Idéal pour travailler en toute sérénité."</p>
+          <div class="stars">★★★★★</div>
+        </div>
+        <div class="avis-card">
+          <h3>Jack Salnot</h3>
+          <p>"Immeuble sobre et bien conçu, mais il manque un peu d’âme à mon goût."</p>
+          <div class="stars">★★★☆☆</div>
+        </div>
+        <div class="avis-card">
+          <h3>Marlène Jackson</h3>
+          <p>"Un immeuble de bureaux moderne et bien aménagé. Rien à redire !"</p>
+          <div class="stars">★★★★☆</div>
+        </div>
+        <div class="avis-card">
+          <h3>Mahesh Kumar</h3>
+          <p>"Un très bon espace de bureaux, bien organisé et agréable."</p>
+          <div class="stars">★★★★★</div>
+        </div>
+        <div class="avis-card">
+          <h3>Allen Alvares</h3>
+          <p>"Un espace de travail impeccable, idéalement situé. Je recommande."</p>
+          <div class="stars">★★★★★</div>
+        </div>
+      </div>
     </div>
-</section>
+  </section>
 
 
 
   <!-- Contact Section -->
   <section id="contact">
-    <div class="contact-container">  
+    <div class="contact-container">
       <div class="form-container">
         <h2>Contactez-moi</h2>
         <form id="contact-form">
@@ -190,13 +234,16 @@
           <input type="email" id="email" placeholder="Votre email" required />
           <textarea id="message" placeholder="Votre message" required></textarea>
           <button type="submit">Envoyer</button>
-      </form>
-      
-      <div id="status-message"></div>
+        </form>
+
+        <div id="status-message"></div>
       </div>
       <div class="map-container">
-        <div style="width: 100%"><iframe width="100%" height="600" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=Immeuble%20le%20Calypso,%20Quartier%20Euromed,%2048%20Quai%20du%20Lazaret,%2013002%20Marseille+(EY%20Soci%C3%A9t%C3%A9%20d%E2%80%99Avocats)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.gps.ie/">gps trackers</a></iframe></div>     -->
-    </div> 
+        <div style="width: 100%"><iframe width="100%" height="600" frameborder="0" scrolling="no" marginheight="0"
+            marginwidth="0"
+            src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=Immeuble%20le%20Calypso,%20Quartier%20Euromed,%2048%20Quai%20du%20Lazaret,%2013002%20Marseille+(EY%20Soci%C3%A9t%C3%A9%20d%E2%80%99Avocats)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a
+              href="https://www.gps.ie/">gps trackers</a></iframe></div> -->
+      </div>
     </div>
   </section>
 
