--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -1,16 +1,28 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mentions Légales - Maître [Nom]</title>
-  <link rel="stylesheet" href="/stylesPage.css">
-
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="description" content="Les mentions légales du site de Maître Giorgi, avocat à Marseille. Informations légales concernant la publication et la gestion du site.">
+  <meta name="keywords" content="mentions légales, avocat, Marseille, légalité, publication">
+  <meta name="author" content="Maître Giorgi">
+  <meta property="og:title" content="Mentions légales - Maître Giorgi Avocat à Marseille">
+  <meta property="og:description" content="Consultez les mentions légales du site de Maître Giorgi, avocat à Marseille. Informations sur le responsable de la publication et les conditions d'utilisation du site.">
+  <meta property="og:url" content="https://lisagiorgiavocat.netlify.app/mentions-legales">
+  <meta property="og:type" content="website">
+  <title>Mentions légales - Maître Giorgi Avocat à Marseille</title>
+  <link rel="icon" type="image/x-icon" href="logo.ico">
+  <link rel="stylesheet" href="stylesPage.css">
 </head>
+
+
 <body>
   <nav>
-    <div><a href="/index.html"><img src="/images.jpeg" alt=""></a></div>
-    <div>    <h1>Mentions Légales</h1>
+    <div><a href="/index.html"><img class="logo" src="/logo.jpg" alt="Logo Avocat Lisa Giorgi"></a></div>
+    <div>
+      <h1>Mentions Légales</h1>
     </div>
   </nav>
 
@@ -23,27 +35,31 @@
 
       <h3>1. Éditeur du site</h3>
       <p>Le site [Nom du Site] est édité par :<br>
-         Maître [Nom], Avocat en [Spécialité]<br>
-         Adresse : [Adresse du Cabinet]<br>
-         Téléphone : [Numéro de téléphone]<br>
-         Email : [Email de contact]<br>
+        Maître [Nom], Avocat en [Spécialité]<br>
+        Adresse : [Adresse du Cabinet]<br>
+        Téléphone : [Numéro de téléphone]<br>
+        Email : [Email de contact]<br>
       </p>
 
       <h3>2. Hébergeur du site</h3>
       <p>Le site est hébergé par :<br>
-         [Nom de l'Hébergeur]<br>
-         Adresse de l'hébergeur : [Adresse]<br>
-         Téléphone : [Numéro de téléphone de l'hébergeur]<br>
+        [Nom de l'Hébergeur]<br>
+        Adresse de l'hébergeur : [Adresse]<br>
+        Téléphone : [Numéro de téléphone de l'hébergeur]<br>
       </p>
 
       <h3>3. Propriété intellectuelle</h3>
-      <p>Le contenu du site (textes, images, logos, etc.) est la propriété exclusive de Maître [Nom], sauf mention contraire. Toute reproduction ou utilisation sans autorisation préalable est interdite.</p>
+      <p>Le contenu du site (textes, images, logos, etc.) est la propriété exclusive de Maître [Nom], sauf mention
+        contraire. Toute reproduction ou utilisation sans autorisation préalable est interdite.</p>
 
       <h3>4. Données personnelles</h3>
-      <p>Les données personnelles collectées sur ce site sont utilisées uniquement dans le cadre de la gestion des demandes de contact et des services proposés par Maître [Nom]. Vous disposez d'un droit d'accès, de rectification et de suppression de vos données personnelles.</p>
+      <p>Les données personnelles collectées sur ce site sont utilisées uniquement dans le cadre de la gestion des
+        demandes de contact et des services proposés par Maître [Nom]. Vous disposez d'un droit d'accès, de
+        rectification et de suppression de vos données personnelles.</p>
 
       <h3>5. Responsabilité</h3>
-      <p>Maître [Nom] met tout en œuvre pour assurer la bonne qualité des informations sur ce site, mais ne saurait être tenue responsable des erreurs ou omissions pouvant y figurer.</p>
+      <p>Maître [Nom] met tout en œuvre pour assurer la bonne qualité des informations sur ce site, mais ne saurait être
+        tenue responsable des erreurs ou omissions pouvant y figurer.</p>
     </div>
   </section>
 
@@ -57,4 +73,5 @@
   </footer>
 
 </body>
+
 </html>
