--- a/politique-confidentialite.html
+++ b/politique-confidentialite.html
@@ -3,42 +3,56 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/stylesPage.css">
-  <title>Politique de Confidentialité - Maître Giorgi</title>
-  <style>
-  
-  </style>
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="description" content="La politique de confidentialité du site de Maître Giorgi, avocat à Marseille, détaillant la gestion des données personnelles et la conformité avec le RGPD.">
+  <meta name="keywords" content="politique de confidentialité, RGPD, données personnelles, avocat, Marseille, confidentialité">
+  <meta name="author" content="Maître Giorgi">
+  <meta property="og:title" content="Politique de confidentialité - Maître Giorgi Avocat à Marseille">
+  <meta property="og:description" content="Découvrez la politique de confidentialité du site Maître Giorgi, avocat à Marseille, expliquant la gestion et la protection des données personnelles en conformité avec le RGPD.">
+  <meta property="og:url" content="https://lisagiorgiavocat.netlify.app/politique-de-confidentialite">
+  <meta property="og:type" content="website">
+  <title>Politique de confidentialité - Maître Giorgi Avocat à Marseille</title>
+  <link rel="icon" type="image/x-icon" href="logo.ico">
+  <link rel="stylesheet" href="stylesPage.css">
 </head>
 <body>
   <nav>
-    <div><a href="/index.html"><img src="/images.jpeg" alt=""></a></div>
-    
-    <div>    <h1>Politique de Confidentialité</h1>
+    <div><a href="/index.html"><img class="logo" src="/logo.jpg" alt="Logo Avocat Lisa Giorgi"></a></div>
+    <div>
+      <h1>Politique de Confidentialité</h1>
     </div>
   </nav>
   <!-- Contenu de la Politique de Confidentialité -->
   <section>
     <div>
       <h2>Protection des données personnelles</h2>
-      <p>Maître [Nom] s'engage à protéger vos données personnelles et à respecter votre vie privée. Cette politique de confidentialité explique comment nous collectons, utilisons, stockons et protégeons vos informations.</p>
+      <p>Maître [Nom] s'engage à protéger vos données personnelles et à respecter votre vie privée. Cette politique de
+        confidentialité explique comment nous collectons, utilisons, stockons et protégeons vos informations.</p>
 
       <h3>1. Données collectées</h3>
-      <p>Les informations personnelles collectées sur ce site incluent votre nom, votre adresse e-mail, ainsi que tout autre renseignement que vous nous communiquez via le formulaire de contact.</p>
+      <p>Les informations personnelles collectées sur ce site incluent votre nom, votre adresse e-mail, ainsi que tout
+        autre renseignement que vous nous communiquez via le formulaire de contact.</p>
 
       <h3>2. Utilisation des données</h3>
-      <p>Les informations que nous collectons sont utilisées pour répondre à vos demandes, améliorer nos services, et vous envoyer des informations relatives à nos services si vous en faites la demande.</p>
+      <p>Les informations que nous collectons sont utilisées pour répondre à vos demandes, améliorer nos services, et
+        vous envoyer des informations relatives à nos services si vous en faites la demande.</p>
 
       <h3>3. Partage des données</h3>
-      <p>Maître [Nom] ne partage vos informations personnelles avec aucun tiers, sauf si cela est nécessaire pour répondre à votre demande ou dans les cas prévus par la loi.</p>
+      <p>Maître [Nom] ne partage vos informations personnelles avec aucun tiers, sauf si cela est nécessaire pour
+        répondre à votre demande ou dans les cas prévus par la loi.</p>
 
       <h3>4. Sécurité des données</h3>
-      <p>Nous mettons en place des mesures de sécurité pour protéger vos données contre tout accès non autorisé, modification ou divulgation.</p>
+      <p>Nous mettons en place des mesures de sécurité pour protéger vos données contre tout accès non autorisé,
+        modification ou divulgation.</p>
 
       <h3>5. Droits sur vos données</h3>
-      <p>Conformément à la réglementation en vigueur, vous disposez d'un droit d'accès, de rectification, de suppression, ainsi que d'un droit à la portabilité de vos données personnelles. Vous pouvez exercer ces droits en nous contactant directement par e-mail à [Email de contact].</p>
+      <p>Conformément à la réglementation en vigueur, vous disposez d'un droit d'accès, de rectification, de
+        suppression, ainsi que d'un droit à la portabilité de vos données personnelles. Vous pouvez exercer ces droits
+        en nous contactant directement par e-mail à [Email de contact].</p>
 
       <h3>6. Modifications de la politique</h3>
-      <p>Nous nous réservons le droit de modifier cette politique de confidentialité à tout moment. Toute modification sera publiée sur cette page.</p>
+      <p>Nous nous réservons le droit de modifier cette politique de confidentialité à tout moment. Toute modification
+        sera publiée sur cette page.</p>
     </div>
   </section>
 
@@ -52,4 +66,5 @@
   </footer>
 
 </body>
+
 </html>
