--- a/index.html
+++ b/index.html
@@ -60,9 +60,8 @@
       <img src="/profil.jpeg" alt="Maître Giorgi" class="header-photo">
       <div class="header-text">
         <h1>Lisa Giorgi</h1>
-        <h2>Avocat en fiscalité</h2>
-        <p>Je vous accompagne avec rigueur et discrétion pour défendre vos droits et vous guider dans vos démarches
-          juridiques.</p>
+        <h2>Avocat au Barreau de Marseille</h2>
+        <p>Je veille à structurer et sécuriser la fiscalité des particuliers et des entreprise, avec une approche intégrée en droit des sociétés</p>
       </div>
     </div>
   </header>
@@ -266,19 +265,36 @@
         <div style="width: 100%"><iframe width="100%" height="600" frameborder="0" scrolling="no" marginheight="0"
             marginwidth="0"
             src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=Immeuble%20le%20Calypso,%20Quartier%20Euromed,%2048%20Quai%20du%20Lazaret,%2013002%20Marseille+(EY%20Soci%C3%A9t%C3%A9%20d%E2%80%99Avocats)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a
-              href="https://www.gps.ie/">gps trackers</a></iframe></div> -->
+              href="https://www.gps.ie/">gps trackers</a></iframe></div>
       </div>
     </div>
   </section>
 
   <!-- Footer Section -->
   <footer>
+   
+
+    <div class="footer-socials">
+      <a href="mailto:lisa.giorgi.avocat@outlook.com">
+        <img src="/email.svg" alt="Email"> 
+    </a>
+    <a href="tel:+33612414382">
+        <img src="/tel2.svg" alt="Téléphone">
+    </a>
+        <a href="https://www.instagram.com/fiscaliz.g/" target="_blank">
+            <img src="/insta.svg" alt="Instagram">
+        </a>
+        <a href="https://www.linkedin.com/in/lisa-giorgi-b09844187/?originalSubdomain=fr" target="_blank">
+            <img src="/linkedin.svg" alt="LinkedIn">
+        </a>
+    </div>
     <div class="footer-links">
       <a href="/mentions-legales.html">Mentions légales</a>
       <a href="/politique-confidentialite.html">Politique de confidentialité</a>
-    </div>
+  </div>
     <p>&copy; 2025 Maître Giorgi | Tous droits réservés</p>
-  </footer>
+</footer>
+
 
 </body>
 <script src="/script.js"></script>
